Fix image overflow
Landscape images could overflow in certain situations before.

--- a/styles.css
+++ b/styles.css
@@ -496,7 +496,8 @@ textarea {
 }
 
 #card-image {
-    height: 100%;
+    max-height: 100%;
+    max-width: 100%;
 }
 
 #top-text {
